fix: emitDBArgument
